@@ -570,9 +570,13 @@ variables:
 	pi:long_name = "Pi";
 	pi:units = "fraction";
 
-	double pi_arr(time);
-	pi_arr:long_name = "Pi array";
-	pi_arr:units = "fraction";
+	double pi_arr_dbl(time);
+	pi_arr_dbl:long_name = "Pi array double precision";
+	pi_arr_dbl:units = "fraction";
+
+	float pi_arr_flt(time);
+	pi_arr_flt:long_name = "Pi array single precision";
+	pi_arr_flt:units = "fraction";
 
 	int int_var;
 	int_var:long_name = "int";
@@ -1400,7 +1404,8 @@ data:
 	rec_var_pck_scale_factor_only=1,2,3,4,5,6,7,8,9,10;
 	pck_arr=-32767,0,1,32767;
 	pi=3.1415926535897932384626433832795029;
-	pi_arr=3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029;
+	pi_arr_dbl=3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029;
+	pi_arr_flt=3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029;
 	upk=3.;
 	upk_arr=-32767.,0.,1.,32767.;
 	H2O=1.0;
